--- a/login.html
+++ b/login.html
@@ -10,7 +10,7 @@
         <title>WorkEaze</title>
         <meta name="description" content="">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="/styles.css">
+        <link rel="stylesheet" href="/styles.css"/>
     </head>
     <body>
        <body>
