--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <!-- <link rel="stylesheet" href="/styles.css"> -->
         <script src="https://cdn.tailwindcss.com"></script>
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css" integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous"/>
-        <link rel="stylesheet" href="styles.css"/>
+        <link rel="stylesheet" href="main.css"/>
     </head>
     <header class="text-gray-600 body-font">
         <div class="container mx-auto flex flex-wrap p-5 flex-col md:flex-row items-center">
