--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
           </a>
           <nav class="md:ml-auto flex flex-wrap items-center text-base justify-center">
             <a class="mr-5 hover:text-gray-900">Home</a>
-            <a class="mr-5 hover:text-gray-900" href="/login.html">Login</a>
+            <a class="mr-5 hover:text-gray-900" href="login.html">Login</a>
             <a class="mr-5 hover:text-gray-900">Contact us</a>
             <a class="mr-5 hover:text-gray-900">Feedback</a>
           </nav>
