--- a/login.html
+++ b/login.html
@@ -16,8 +16,8 @@
        <body>
 <div class="container">
   <section id="content">
-    <form action="">
-      <h1>User Login Changes reflected</h1>
+    <form action=""> 
+      <h1>User Login</h1>
       <div>
         <input type="text" placeholder="Username" required="" id="username" />
       </div>
